# System-monitor-and-behavior-analyzer

./: .gitignore  CMakeLists.txt  README.md  imgui.ini  run.sh  walkthrough.md
.github/workflows/: ci.yml
config/: default.json
deploy/: sysmonitor.service
src/: main.cpp
src/analysis/: anomaly_detector.cpp  anomaly_detector.h  baseline_calculator.cpp  baseline_calculator.h  risk_scorer.cpp  risk_scorer.h
src/analyzer/: alerter.cpp  alerter.h  analyzer.cpp  analyzer.h  baseline_manager.cpp  baseline_manager.h  correlation_engine.cpp  correlation_engine.h  event_timeline.cpp  event_timeline.h  explainer.cpp  explainer.h  pattern_detector.cpp  pattern_detector.h  risk_engine.cpp  risk_engine.h
src/collectors/: collector.h  cpu_collector.cpp  cpu_collector.h  disk_collector.cpp  disk_collector.h  memory_collector.cpp  memory_collector.h  network_collector.cpp  network_collector.h  process_collector.cpp  process_collector.h
src/core/: config.cpp  config.h  config_watcher.cpp  config_watcher.h  metric_queue.h  scheduler.cpp  scheduler.h  types.h
src/dashboard/: dashboard.cpp
src/storage/: sqlite_storage.cpp  sqlite_storage.h  storage_engine.h
src/utils/: logger.cpp  logger.h
tests/: CMakeLists.txt  test_analyzer.cpp  test_anomaly_detector.cpp  test_baseline_calculator.cpp  test_baseline_manager.cpp  test_cpu_collector.cpp  test_event_timeline.cpp  test_explainer.cpp  test_memory_collector.cpp  test_pattern_detector.cpp  test_risk_engine.cpp  test_scheduler.cpp  test_sqlite_storage.cpp
